--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="https://www.pngkey.com/png/full/873-8736065_stickers-heinsenberg-2-ombre-breaking-bad-png-logo.png">
     <title>Breaking-Bad</title>
 </head>
@@ -54,7 +54,7 @@
 
                 <!-- Logo -->
                 <a class="navbar-brand" href="#">
-                    <img src="/assets/logo-Breaking-Bad.png" id="reload" class="logo">
+                    <img src="assets/logo-Breaking-Bad.png" id="reload" class="logo">
                 </a>
 
             </div>
@@ -141,8 +141,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="/js/index.js"></script>
-    <script src="/js/filter.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/filter.js"></script>
 </body>
 
 </html>
